src/mesa/drivers/dri/i965/genX_state_upload.c
@@ -5366,8 +5366,6 @@ genX(init_atoms)(struct brw_context *brw)
 
       /* Command packets:
        */
-      &brw_invariant_state,
-
       &brw_binding_table_pointers,
       &genX(blend_constant_color),
 
